--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,7 +40,7 @@ android {
 }
 dependencies {
     implementation 'cn.jiguang.sdk:janalytics:2.1.2'
-    implementation 'cn.jiguang.sdk:jcore-google:4.2.4'
-//    implementation 'cn.jiguang.sdk:jcore:4.2.0'
+//    implementation 'cn.jiguang.sdk:jcore-google:4.4.0'
+    implementation 'cn.jiguang.sdk:jcore:4.4.0'
     compileOnly files('libs/flutter.jar')
 }
